css/nav.css
html, body {
	--darkdarkgray: #222222;
	--darkgray: #333333;
    --white: #fff;
}

/* NAVIGATION */
.navbar {
	display: flex;
	justify-content: flex-end;
	flex-wrap: wrap;
	background-color: var(--darkdarkgray);
	overflow: hidden;
    z-index: 10;
}

.navbar a {
	font-family: "nova mono", monospace;
	font-size: 1rem;
	margin: auto;
	margin-left: 0px;
	margin-right: 0px;
	color: var(--darkdarkgray);
	padding: 5px;
	opacity: 0.8;
	background-color: var(--white);
	cursor: pointer;
	position: relative;
	height: 50%;
	/* "transparent" border to add what looks like a margin at the top and bottom */
	border-radius: 10%;
	border-color: var(--darkdarkgray);
	border-width: 10px 5px;
	border-style: solid;
}

@media only screen and (max-device-width: 1024px) {
	.navbar a {
		font-size: 2vmax; /* scalable navigation bar  */
	}
}

.navbar a:hover {
	opacity: 1;
}

.navbar span {
	display: inline-block;
	position: relative;
	transition: 0.5s;
}

.navbar span::after {
	transition: 0.5s;
	content: ' \00bb';
	opacity: 0;	/* hide arrow */
	position: absolute;
	top: 0;
	right: -20px;
}

.navbar a:hover span {
	padding-right: 15px;
}

.navbar a:hover span::after {
	opacity: 1; /* show arrow */
	right: 0;
}

